@@ -3,11 +3,8 @@
 iconsdir = $(datadir)/icons/hicolor/16x16/apps
 
 icons_DATA =								\
-	xfce-system-settings.png					\
 	xfce-system-lock.png						\
-	xfce-system-info.png						\
 	xfce-system-exit.png
-
 
 EXTRA_DIST =								\
 	$(icons_DATA)
