@@ -3,7 +3,7 @@ Type=X-XFCE-PanelPlugin
 Encoding=UTF-8
 _Name=Action Buttons
 _Comment=Log out or lock the screen
-Icon=xfce-system-exit
+Icon=system-log-out
 X-XFCE-Module=actions
 X-XFCE-Module-Path=@libdir@/xfce4/panel-plugins
 
