@@ -3,7 +3,7 @@ Type=X-XFCE-PanelPlugin
 Encoding=UTF-8
 _Name=Clock
 _Comment=What time is it?
-Icon=xfce-schedule
+Icon=xfce4-clock
 X-XFCE-Module=clock
 X-XFCE-Module-Path=@libdir@/xfce4/panel-plugins
 
