@@ -3,7 +3,7 @@ Type=X-XFCE-PanelPlugin
 Encoding=UTF-8
 _Name=Pager
 _Comment=Miniature view of all virtual desktops
-Icon=wksp
+Icon=xfce4-workspaces
 X-XFCE-Module=pager
 X-XFCE-Module-Path=@libdir@/xfce4/panel-plugins
 
