@@ -3,6 +3,7 @@ Type=X-XFCE-PanelPlugin
 Encoding=UTF-8
 _Name=Separator or Spacing
 _Comment=Adds a space or a line between panel items
+Icon=xfce4-separator
 X-XFCE-Module=separator
 X-XFCE-Module-Path=@libdir@/xfce4/panel-plugins
 
