@@ -3,7 +3,7 @@ Type=X-XFCE-PanelPlugin
 Encoding=UTF-8
 _Name=Window List
 _Comment=Show list of available windows
-Icon=xfce-windowlist
+Icon=preferences-system-windows
 X-XFCE-Module=windowlist
 X-XFCE-Module-Path=@libdir@/xfce4/panel-plugins
 
