@@ -7,6 +7,7 @@
   some problems with plugins. Plugin developers should add libxfcegui4
   to the dependencies of their package (including cflags and libadd in
   the makefiles).
+- Some new Tango icons.
 
 
 4.3.99.3 (4.4-RC3)
