@@ -1,3 +1,8 @@
+2007-03-17 0:00  nick
+
+	* Improve the icons with some tango ones or the standard icon names. Also remove
+	  the icons that are not needed anymore.
+
 2007-03-14 9:15  nick
 
 	* plugins/tasklist/tasklist.c: Fix previous commit
